Don't throw an error when a filter returns 0 bytes and a normal return code. This often happens with eexecDecode filter, which has to return the control to the interpreter after every space character since Adobe no longer adds zeros at the end of the encoded block. Document new return code 2 used by eexecDecode filter. Bug 690909.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@10926 a1074d23-0009-0410-80fe-cf8c14f379e6